--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f058bb11",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "c6bcac2c",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,6 +58,49 @@
     "import os\n",
     "\n",
     "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f4e22b85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we first import the class ChatOpenAI from the langchain_openai package. This class is used to create an instance of a chat model that can interact with users in a conversational manner. By importing this class, we can utilize its functionalities to build chat-based applications or interfaces that leverage the capabilities of OpenAI's language models.\n",
+    "from langchain_openai import ChatOpenAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f4c97e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an object of the class ChatOpenAI and assign it to the variable chat. This object will allow us to interact with the OpenAI chat model and utilize its features for generating responses in a conversational context.\n",
+    "chat_llm = ChatOpenAI(model=\"gpt-4o-mini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "87831d79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Hello! I'm just a computer program, so I don't have feelings, but I'm here and ready to help you. How can I assist you today?\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_llm.invoke(\"Hello, how are you?\").content"
    ]
   }
  ],
